# sodium_demo

./: CMakeLists.txt  CMakePresets.json  README.md  main.cc
.github/workflows/: c-cpp.yml
cmake/: vcpkg.json
